@@ -3,6 +3,7 @@
     "[Unknown Skies] The unique conditions of toxic worlds can occasionally result in the formation of special chemical crystals which can be turned into jewellery and other luxury items.",
     "[Unknown Skies] Who knows what unique worlds lie beyond the Core Worlds...",
     "[Unknown Skies] Some planets have unique characteristics or structures which can ease colony development.",
-    "[Unknown Skies] While Desert and Desertic worlds may seem identical at first glance, the former often tend to be habitable unlike the latter."
+    "[Unknown Skies] While desert and desertic worlds may seem identical at first glance, the former often tend to be habitable unlike the latter.",
+    "[Unknown Skies] While the main source of food for archipelago worlds comes from aquaculture, the patches of farmland found on the various islands can still be utilized to boost production."
   ],
 }
