@@ -1,3 +1,7 @@
+[WIP 1.0.5]
+- fixed bug which caused water worlds to not have acquiculture
+- added a rather important tooltip for water worlds
+
 1.0.4
 - Reduced the defense debuff from Military Virus to -50% (was -75%).
 - Fixed Military Virus' production buff not applying to Orbital Works.
